--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@ The town is known for its literary and artistic heritage, with the notable figur
                 <li><a href="https://www.youtube.com/watch?v=1AZuT8UniOE&t=107s">Click on me to watch </a></li>
                 <p>The Jagannath Temple in Puri, Odisha is one of the oldest Hindu temples in the world. It is a sacred shrine dedicated to the deity Jagannath, an incarnation of Lord Vishnu. The main deities in the temple are Lord Jagannath, Lord Balabhadra, and Goddess Subhadra.Jagannath Temple in Puri, Odisha, is a revered temple where Lord Krishna is worshipped as Lord Jagannath. There are several unexplained mysteries associated with the temple, such as the direction of the flag, the wooden idols, absence of a shadow, the Mahaprasad served to Lord Jagannath, sound of waves, and more.</p>
             </div>
+             <div class="destination">
+                <img src="darjeeling.jpg" alt="Destination 2">
+                <h3>Darjeeling Vlog </h3>
+                <li><a href="https://www.youtube.com/watch?v=iRk_H7ubhR0">Click on me to watch </a></li>
+                <p>Darjeeling is a town in India's West Bengal state, in the Himalayan foothills. Once a summer resort for the British Raj elite, it remains the terminus of the narrow-gauge Darjeeling Himalayan Railway, or “Toy Train,” completed in 1881. It's famed for the distinctive black tea grown on plantations that dot its surrounding slopes. Its backdrop is Mt. Kanchenjunga, among the world’s highest peaks.Darjeeling is famous throughout the world for the tea it grows and the great view of the Kanchenjunga range of mountains that it offers. It is also known for its richness in cultural & natural heritage and the famous toy train that has been declared a UN heritage.</p>
+            </div>
             <!-- Add more destinations as needed -->
         </section>
         <section id="contact">
